# deer2

./: Cargo.toml  out.tga
benches/: cast_bunny.rs  cast_teapot.rs  fast_f32.rs
data/tga/: lena.tga
src/: lib.rs  main.rs
src/affine/: mod.rs  transform3.rs
src/bitmap/: bitmap.rs  mod.rs  pixel.rs
src/camera/: camera.rs
src/cast/: base.rs  bsp_tree.rs  cast.rs  cast_ray_through_triangles.rs  cast_triangle.rs  cast_triangle_mesh.rs  castable.rs  mod.rs  naive_cast.rs  ray.rs  surface_point.rs  triangle.rs  triangle_list.rs  triangles.rs
src/data/: mod.rs
src/data/stl/: mod.rs
src/data/tga/: mod.rs
src/format/stl/: mod.rs  model.rs  triangle.rs
src/formats/stl/: model.rs  triangle.rs
src/geometry/: geometry.rs  mod.rs  point.rs  ray.rs  triangle.rs  triangle_mesh.rs
src/light/: light.rs  mod.rs  ray.rs  spectrum.rs
src/light_source/: directional_light_source.rs  light_source.rs  mod.rs
src/linear/: linear_space.rs  matrix3.rs  matrix4.rs  mod.rs  vector3.rs  vector4.rs
src/material/: material.rs  mod.rs  simple_pb_material.rs
src/materials/: mod.rs  simple_pb_material.rs
src/math/: fast_f32.rs  linear_space.rs  matrix3.rs  mod.rs  num.rs  random.rs  small_ratio.rs  util_macros.rs  vector2.rs  vector3.rs
src/numeric/: fast_f32.rs  ff32.rs  mod.rs  num.rs  small.rs  small_ratio.rs
src/primitives/: mod.rs  uv_sphere.rs
src/random/: distrib.rs  mod.rs
src/ray/: base.rs
src/render/: mod.rs  raster.rs  renderer.rs  scene.rs
src/tracing/: base.rs  naive_cast.rs
tests/: stl_read_write.rs  tga_read_write.rs
(+1 files in other folders)
